pkg/lang/testdata/ub/outputs/invalid/non-bool-sensitive.ub
outputs: {
  bad: {
    value: 1
    @sensitive: 'yes'
  }
}
